# council

./: .gitignore  LICENSE  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.th.md  README.tr.md  README.vi.md  README.zh.md  browser.html  council.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  协作编程开发须知.md  持续协作需求.md
scripts/: release.sh
src/: browser.ts  cache.ts  i18n-strings.ts  i18n.ts  main.ts  styles.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  render_logo.py
src-tauri/src/: lib.rs  main.rs
tests/: utils.test.ts
