[package]
name = "council"
version = "0.1.7"
description = "Lightweight multi-model workflow client — chain text models into a pipeline"
authors = ["YuKun"]
license = "MIT"
edition = "2021"

[lib]
name = "council_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rustls-tls avoids an OpenSSL system dependency; stream feature gives us SSE chunks.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }
futures-util = "0.3"
# base64 decode for image-to-image (frontend sends the reference image as a data URL)
base64 = "0.22"
# Self-built runtime for the video poll loop (sleep + async HTTP), independent of
# whatever features tauri's own runtime enables.
tokio = { version = "1", features = ["rt", "time", "net", "io-util"] }
# Embedded terminals (协作 / 终端面板): pseudo-terminal to run an interactive shell.
portable-pty = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
